# tinyllama

./: .gitignore  .main.py.swp  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  deploy.py  model.py  pyproject.toml  requirements.txt  tokenizer.py  utils.py
.github/: gcp.yaml
activations/: __init__.py
config/: __init__.py  default.py  llama_config.json
diagnosis/: .lr_diagnosis.py.swp  __init__.py  activations_diagnosis.py  diagnosis.py  gd_ratio_diagnosis.py  gdratio_diagnose.py  gradient_diagnose.py  gradients_diagnosis.py  lr_diagnose.py  lr_diagnosis.py  lrs_diagnosis.py  swiglu_diagnose.py
encoding/: __init__.py
gptuner/: __init__.py  gptuner.py  gptuner.stan
models/: __init__.py  llama.py  mlp.py  tinyllama.py  transformer.py
normalization/: __init__.py
pos_encoding/: __init__.py  roPe.py
saved_models/: tinyllama-llama-0.1.0.pth
tests/: test_generate.py  test_get_batches.py  test_tokenizer.py  test_utils.py
tinyllama/: __init__.py  globals.py
tinyllama/activations/: swiglu.py
tinyllama/diagnosis/: __init__.py  diagnosis.py  gdratio_diagnose.py  gradient_diagnose.py  lr_diagnose.py  swiglu_diagnose.py
tinyllama/encoding/: __init__.py  roPE.py
tinyllama/generate/: __init__.py  generate.py
tinyllama/gptuner/: __init__.py  gptuner.py  gptuner.stan
tinyllama/insight/: __init__.py  gdr_insight.py  gradient_insight.py  insight.py  lr_insight.py  swiglu_insight.py
tinyllama/models/: __init__.py  llama.py
tinyllama/normalization/: __init__.py  rms.py
tinyllama/readers/: __init__.py  readers.py
tinyllama/tokenizers/: __init__.py  tokenizers.py
tinyllama/training/: __init__.py  training.py
tokenizers_/: __init__.py  tokenizer.py  tokenizers.py
training/: __init__.py  training.py
