[project]
name = "tinyllama"
version = "0.0.1b"
description = "Model classes and pre-training utilities for a tiny version of Llama in PyTorch."
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Achraf Miftah", email = "m.miftah.achraf@gmail.com"},
]
keywords = ["llama", "llm", "deep-learning", "tinyllama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "github.com/miftahmoha/tinyllama"}
dependencies = ["tqdm", "torch", "pandas", "PyPDF2", "matplotlib", "numpy", "pystan"]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["tinyllama/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false
